# ZDD-based-solver-Experiment

./: .gitignore  10_result.csv  README.md  V-Reconf_time-step.csv  ZDD_based_solver_log.txt  analyze.py  analyze_all_result.sh  analyze_reconf_time.py  calculate_all_benchmark.py  calculate_benchmark_repeat.sh  card-size-time-Z_sol-V.csv  diameter.py  diameter.sh  diameter.txt  first_10steps_analyze.py  get_all_benchmark_path.py  get_instance.py  make_csv_from_log.py  plot_1step_time.py  plot_V_Reconf_time_step.py  reconf_time-zdd.csv  reconf_time.csv  remove_bugfile.py  result.csv  result.xlsx  setup.py  solve_ISR.py  ~$result.xlsx
env/: pip-selfcheck.json  pyvenv.cfg
graphillion/: graphset.py  reconf.py  setset.py
results/: 1800_0.csv  1800_1.csv  1800_10.csv  1800_100.csv  1800_101.csv  1800_102.csv  1800_103.csv  1800_104.csv  1800_105.csv  1800_106.csv  1800_107.csv  1800_108.csv  1800_109.csv  1800_11.csv  1800_110.csv  1800_111.csv  1800_112.csv  1800_113.csv  1800_114.csv  1800_115.csv  1800_116.csv  1800_117.csv  1800_118.csv  1800_119.csv  1800_12.csv  1800_120.csv  1800_121.csv  1800_122.csv  1800_123.csv  1800_124.csv  1800_125.csv  1800_126.csv  1800_127.csv  1800_128.csv  1800_129.csv  1800_13.csv  1800_130.csv  1800_131.csv  (+581 more)
src/: CMakeLists.txt  pygraphillion.cc
src/SAPPOROBDD/: BDD.h  SBDD_helper.h  ZBDD.cc  ZBDD.h  bddc.c  bddc.h
src/graphillion/: biginteger.hpp  randomsample.hpp  reconf.cc  reconf.h  reconfutil.hpp  setset.cc  setset.h
src/test/: AdjacentSpec.hpp  SolutionSpace.hpp  independentset.hpp  reconf_test.cc  setset_test.cc
(+7 files in other folders)
